--- a/style.css
+++ b/style.css
@@ -294,6 +294,7 @@ main{
     background-size: cover;
     background-position: center; 
     display: flex;
+    align-items: center;
     justify-content: center;
     gap: 1rem;
     width: 100%;
@@ -307,7 +308,7 @@ main{
     gap: 1rem;
     width: 50%;
     max-width: fit-content;
-    max-height: 428px;
+    height: 428px;
     padding: 1rem;
     border-radius: 1rem;
 }
@@ -346,6 +347,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 1rem;
     width: 100%;
     min-height: 100vh;
@@ -553,6 +555,7 @@ main{
     /* inicio index */
     .principal{
         padding: 2rem;
+        background-position: left;
     }
     /* inicio index */
     
